--- a/ETC5513-Assignment2.Rmd
+++ b/ETC5513-Assignment2.Rmd
@@ -6,3 +6,16 @@ output:
 keep_md: true
 ---
 
+# Loading libraries
+
+```{r , message = FALSE}
+library(tidyverse)
+library(readr)
+library(kableExtra)
+library(ggplot2)
+library(lubridate)
+library(gridExtra)
+library(rmdformats)
+library(plotly)
+```
+
