--- a/ETC5513-Assignment2.Rmd
+++ b/ETC5513-Assignment2.Rmd
@@ -19,3 +19,53 @@ library(rmdformats)
 library(plotly)
 ```
 
+```{r Getting Data, echo = TRUE, message = FALSE, warning = FALSE}
+data<- read_csv("Data/covid_aus.csv")
+```
+
+```{r structure}
+glimpse(data)
+```
+
+```{r}
+data <- data %>% 
+  mutate(date = as.Date(date, "%d/%m/%y"))
+
+glimpse(data)
+```
+
+```{r summary of stringency_index}
+data %>% dplyr::select(stringency_index) %>%
+  summary() %>%
+  kable(caption = "Table 1") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"))
+```
+
+```{r confirmed cases by states}
+data %>%
+  group_by(id) %>%
+  summarise(confirmed_cases = max(confirmed)) %>%
+  kable(caption = "Table 2") %>%
+  kable_styling(bootstrap_options = c("striped", "hover"))
+```
+
+```{r, fig.cap= "Figure 1"}
+# Examining the situation in Australia
+p <- data %>%
+  group_by(date,country) %>%
+  summarise(confirmed_cases = sum(confirmed)) %>%
+  ggplot(aes(x = date, y = confirmed_cases)) +
+  geom_line() + scale_y_continuous(trans = "log10", labels = scales::comma)
+
+ggplotly(p)
+```
+
+```{r, fig.cap= "Figure 2"}
+# Examining situation in States of Australia 
+q <- data %>%
+  filter(country=="Australia") %>%
+  ggplot(aes(x = date , y = confirmed, color = stringency_index)) + geom_line() +
+  facet_wrap(~id)
+
+ggplotly(q)
+```
